Remove usage of primitive constructors
Fix #15