@@ -19,6 +19,7 @@ package org.jboss.el.lang;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.math.RoundingMode;
 
 import org.jboss.el.util.MessageFactory;
 
@@ -65,8 +66,7 @@ public abstract class ELArithmetic {
 
         @Override
 		protected Number divide(Number num0, Number num1) {
-            return ((BigDecimal) num0).divide((BigDecimal) num1,
-                    BigDecimal.ROUND_HALF_UP);
+            return ((BigDecimal) num0).divide((BigDecimal) num1, RoundingMode.HALF_UP);
         }
 
         @Override
@@ -76,7 +76,7 @@ public abstract class ELArithmetic {
 
         @Override
 		protected Number mod(Number num0, Number num1) {
-            return new Double(num0.doubleValue() % num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() % num1.doubleValue());
         }
 
         @Override
@@ -112,7 +112,7 @@ public abstract class ELArithmetic {
 
         @Override
 		protected Number divide(Number num0, Number num1) {
-            return (new BigDecimal((BigInteger) num0)).divide(new BigDecimal((BigInteger) num1), BigDecimal.ROUND_HALF_UP);
+            return (new BigDecimal((BigInteger) num0)).divide(new BigDecimal((BigInteger) num1), RoundingMode.HALF_UP);
         }
 
         @Override
@@ -146,7 +146,7 @@ public abstract class ELArithmetic {
         	} else if (num1 instanceof BigDecimal) {
         		return ((new BigDecimal(num0.doubleValue()).add((BigDecimal) num1)));
         	}
-            return new Double(num0.doubleValue() + num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() + num1.doubleValue());
         }
 
         @Override
@@ -157,22 +157,22 @@ public abstract class ELArithmetic {
             if (num instanceof BigInteger) {
             	return new BigDecimal((BigInteger) num);
             }
-            return new Double(num.doubleValue());
+            return Double.valueOf(num.doubleValue());
         }
 
         @Override
 		protected Number coerce(String str) {
-            return new Double(str);
+            return Double.valueOf(str);
         }
 
         @Override
 		protected Number divide(Number num0, Number num1) {
-            return new Double(num0.doubleValue() / num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() / num1.doubleValue());
         }
 
         @Override
 		protected Number mod(Number num0, Number num1) {
-            return new Double(num0.doubleValue() % num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() % num1.doubleValue());
         }
 
         @Override
@@ -183,7 +183,7 @@ public abstract class ELArithmetic {
         	} else if (num1 instanceof BigDecimal) {
         		return ((new BigDecimal(num0.doubleValue()).subtract((BigDecimal) num1)));
         	}
-            return new Double(num0.doubleValue() - num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() - num1.doubleValue());
         }
 
         @Override
@@ -194,7 +194,7 @@ public abstract class ELArithmetic {
         	} else if (num1 instanceof BigDecimal) {
         		return ((new BigDecimal(num0.doubleValue()).multiply((BigDecimal) num1)));
         	}
-            return new Double(num0.doubleValue() * num1.doubleValue());
+            return Double.valueOf(num0.doubleValue() * num1.doubleValue());
         }
 
         @Override
